# SciReplicBench

./: .gitignore  AUTHORSHIP.md  CITATION.cff  LICENSE  README.md  pyproject.toml  sitecustomize.py
configs/: phase4a_pilot_plan.json  phase4b_production_plan.json  runtime.env.example
environments/: Dockerfile  Dockerfile.smoke  compose.genelab_benchmark.yaml  compose.inspiration4_multiome.yaml  compose.smoke.yaml  compose.squidpy_spatial.yaml  compose.yaml  requirements.genelab_benchmark.txt  requirements.inspiration4_multiome.txt  requirements.squidpy_spatial.smoke.txt  requirements.squidpy_spatial.txt  requirements.txt
examples/: README.md  evidence_policy_probe_v0_4.json  squidpy_evidence_policy_agent_probe_v0_6.json  squidpy_evidence_policy_agent_probe_v0_7.json  squidpy_evidence_policy_agent_probe_v0_8.json  squidpy_evidence_policy_agent_probe_v0_9.json  squidpy_evidence_policy_agent_probe_v0_9_sonnet.json  squidpy_evidence_policy_agent_probe_v1_0.json  squidpy_evidence_policy_agent_probe_v1_0_sonnet.json  squidpy_evidence_policy_agent_probe_v1_1.json  squidpy_evidence_policy_agent_probe_v1_1_haiku.json  squidpy_evidence_policy_agent_probe_v1_1_sonnet.json  squidpy_evidence_policy_agent_probe_v1_2.json  squidpy_evidence_policy_agent_probe_v1_2_execution_clarified.json  squidpy_evidence_policy_agent_probe_v1_2_haiku.json  squidpy_evidence_policy_agent_probe_v1_2_judge_gpt4o_mini.json  squidpy_evidence_policy_agent_probe_v1_2_judge_o3_mini.json  squidpy_evidence_policy_agent_probe_v1_2_judge_o3_mini_calibrated.json  squidpy_evidence_policy_probe_v0_5.json  (+14 more)
(+87 files in other folders)
